[gd_scene load_steps=2 format=3 uid="uid://bgv6ngvbjsrqk"]

[ext_resource type="Script" uid="uid://bm2uviwbqtubc" path="res://scenes/load_menu.gd" id="1_rvg4c"]

[node name="LoadMenu" type="CanvasLayer"]
script = ExtResource("1_rvg4c")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -61.0
offset_right = 56.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cargar partida"

[node name="LoadSlot1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LoadSlot2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LoadSlot3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Volver"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
